--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ PORT=3000
 
 NODE_ENV=development
 
+LOG_LEVEL=info
+
 DATABASE_URL=postgresql://neondb_owner:npg_u05FPsivqbrg@ep-summer-violet-afifhowc-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+JWT_SECRET=thisismysecretkeyofjwt
+
+JWT_EXPIRES_IN=1d
