Secure API with arcjet

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DATABASE_URL=postgresql://neondb_owner:npg_u05FPsivqbrg@ep-summer-violet-afifhow
 JWT_SECRET=thisismysecretkeyofjwt
 
 JWT_EXPIRES_IN=1d
+
+ARCJET_ENV=development
+
+ARCJET_KEY=ajkey_01k9mhddxpezzsf1kae36dmh9s
