--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "scripts": {
     "dev": "node --watch src/index.js",
+    "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "dev:docker": "node ./scripts/dev-wrapper.cjs",
+    "prod:docker": "node ./scripts/prod-wrapper.cjs"
   },
   "repository": {
     "type": "git",
